Restart game implemented

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,12 @@ body{vertical-align: baseline;background: #fff;}
 body{margin-top: 20px;font: normal normal 14px/18px Arial, "Helvetica Neue", Helvetica, sans-serif;}
 .jigsaw_container{margin: auto;position: relative;/*width: 300px;height: 300px;*/width: calc(100vmin - 40px);height: calc(100vmin - 40px);}
 .puzzle_box{background: #ccc;position: absolute;border: 1px solid  #c3c3c3;cursor: move;line-height: 100%;text-align: center; -moz-user-select: -moz-none;-khtml-user-select: none;-webkit-user-select: none;-ms-user-select: none;user-select: none; transition: .3s background;}
+.jigsaw_container[data-puzzle-status = 'solved'] > .puzzle_box{cursor: default;}
 .puzzle_box.selected{background: #4a82b2;}
 /*.puzzle_box.swap_candidate,.puzzle_box.swapped{background: #4ab256;}*/
 .puzzle_box::before{content: attr(data-puzzle-box);position: absolute;width: 100%;top: 50%;left: 0;margin-top: -8px;}
+
+/* +++++++++++++++++++++++++++ */
+.tools_bar{position: fixed;bottom: 0;left: 0;width: 100%;padding: 0 10px;text-align: right;}
+.btn_cmn{border: 0;background: #1c7126;color: #fff;border-radius: 3px;height: 30px;line-height: 30px;padding: 0 15px;cursor: pointer;transition: .3s;}
+.btn_cmn:hover,.btn_cmn:focus{background: #3d9848;}
